feat: search cities and names events